# tree-sitter-lilypond

./: .gitignore  .justfile  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lilypond.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lilypond/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: injections.scm
test/corpus/: Common_notation-Single_staff_notation.txt  Tutorial_How-to-write-input-files.txt  clef.txt  comments.txt  music.txt  time-signatures.txt  version.txt
