[package]
name = "tree-sitter-lilypond"
description = "LilyPond grammar for tree-sitter"
version = "0.1.0"
authors = ["niveK77pur <kevinbiewesch@yahoo.fr>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lilypond"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nivek77pur/tree-sitter-lilypond"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
